--- a/index.html
+++ b/index.html
@@ -41,7 +41,91 @@
                         Order Service
                     </button>
                 </section>
+                <section class="feature flex">
+                    <h2 hidden>Feature</h2>
+                    <div class="feature-item">
+                        <h3>Strategy</h3>
+                        <p>
+                            Our goal is to identify the business problem to walk
+                            away with the perfect and creative solution.
+                        </p>
+                    </div>
+                    <div class="feature-item">
+                        <h3>Strategy</h3>
+                        <p>
+                            Our goal is to identify the business problem to walk
+                            away with the perfect and creative solution.
+                        </p>
+                    </div>
+                    <div class="feature-item">
+                        <h3>Strategy</h3>
+                        <p>
+                            Our goal is to identify the business problem to walk
+                            away with the perfect and creative solution.
+                        </p>
+                    </div>
+                    <div class="feature-item">
+                        <h3>Strategy</h3>
+                        <p>
+                            Our goal is to identify the business problem to walk
+                            away with the perfect and creative solution.
+                        </p>
+                    </div>
+                </section>
+                <section class="doing">
+                    <h2 class="doing-header">What are we doing</h2>
+                    <div class="doing-set flex">
+                        <img src="./img/1.png" alt="" class="doing-img" />
+                        <img src="./img/2.png" alt="" class="doing-img" />
+                        <img src="./img/3.png" alt="" class="doing-img" />
+                    </div>
+                </section>
+                <section class="our-team">
+                    <h2 class="our-team-header">Our team</h2>
+                    <div class="team-set flex">
+                        <div class="team-item">
+                            <img
+                                src="./img/4.png"
+                                alt=""
+                                class="team-item-img"
+                            />
+                            <h3 class="item-name">Mark Guerrero</h3>
+                            <p>Product Designer</p>
+                        </div>
+                        <div class="team-item">
+                            <img
+                                src="./img/5.png"
+                                alt=""
+                                class="team-item-img"
+                            />
+                            <h3 class="item-name">Mark Guerrero</h3>
+                            <p>Product Designer</p>
+                        </div>
+                        <div class="team-item">
+                            <img
+                                src="./img/6.png"
+                                alt=""
+                                class="team-item-img"
+                            />
+                            <h3 class="item-name">Mark Guerrero</h3>
+                            <p>Product Designer</p>
+                        </div>
+                        <div class="team-item">
+                            <img
+                                src="./img/7.png"
+                                alt=""
+                                class="team-item-img"
+                            />
+                            <h3 class="item-name">Mark Guerrero</h3>
+                            <p>Product Designer</p>
+                        </div>
+                    </div>
+                </section>
             </main>
+            <footer>
+                <a href="#" class="logo">WEB<span class="logo_white">STUDIO</span></a>
+                <p class="text-under-logo">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </footer>
         </div>
     </body>
 </html>
